<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    style="@style/background_style"
    android:orientation="vertical"
    tools:context="org.d3ifcool.cloure.DishesEditorActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/my_text_color"
                android:textSize="20sp"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:hint="@string/dish_name"
                android:id="@+id/dish_editor_dish_name"
                android:textColor="@color/my_text_color"
                android:textColorHint="@color/my_text_color"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="@color/my_text_color"
                android:text="@string/calories_per_100_gm"
                android:textSize="20sp"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="0"
                android:textColor="@color/my_text_color"
                android:textSize="20sp"
                android:id="@+id/dish_editor_calories"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:inputType="number"/>
        </LinearLayout>
    </ScrollView>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:gravity="bottom">
        <ImageButton
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:background="@null"
            android:src="@drawable/ok_button"
            android:scaleType="centerInside"
            android:id="@+id/dish_editor_OK_button"
            android:contentDescription="@string/set"/>
        <ImageButton
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="60dp"
            android:layout_marginStart="60dp"
            android:background="@null"
            android:src="@drawable/cancel_button"
            android:scaleType="centerInside"
            android:layout_toRightOf="@id/dish_editor_OK_button"
            android:layout_toEndOf="@id/dish_editor_OK_button"
            android:id="@+id/dish_editor_cancel_button"
            android:contentDescription="@string/cancel"/>
    </RelativeLayout>
</LinearLayout>
