<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/background_style"
    tools:context="org.d3ifcool.cloure.DishActivity">
    <RelativeLayout
        style="@style/header_style">
        <TextView
            style="@style/header_text"
            android:text = "@string/dishes">
        </TextView>
        <Button
            style="@style/header_button"
            android:id="@+id/from_dishes_to_menu"
            android:text="@string/to_menu">
        </Button>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:background="@color/my_db_menu_color"
        android:id="@+id/db_dish_menu">
        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@null"
            android:scaleType="centerInside"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_centerVertical="true"
            android:id="@+id/db_dish_add"
            android:onClick="onCreateDish"
            android:src="@drawable/add_item"
            android:contentDescription="@string/create" />
        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@null"
            android:scaleType="centerInside"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:id="@+id/db_dish_delete"
            android:onClick="onDeleteDish"
            android:src="@drawable/delete_item"
            android:contentDescription="@string/delete" />
        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@null"
            android:scaleType="centerInside"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/db_dish_delete"
            android:layout_toStartOf="@id/db_dish_delete"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:id="@+id/db_dish_edit"
            android:onClick="onEditDish"
            android:src="@drawable/edit"
            android:contentDescription="@string/edit" />
    </RelativeLayout>
    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:divider="#242424"
        android:dividerHeight="1dp"
        android:id="@+id/dish_list_view">
    </ListView>
</LinearLayout>