...
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight=".1">

                <Button
                    android:id="@+id/from_menu_to_diary_menu"
                    style="@style/menu_button"
                    android:background="#4c8c4a"
                    android:text="@string/diary"></Button>

                <Button
                    android:id="@+id/from_menu_to_profile"
                    style="@style/menu_button"
                    android:background="#4c8c4a"
                    android:text="@string/profile"></Button>

                <Button
                    android:id="@+id/from_menu_to_dishes"
                    style="@style/menu_button"
                    android:background="#4c8c4a"
                    android:text="@string/dishes"></Button>

                <Button
                    android:id="@+id/from_menu_to_exercises"
...
