...

        <TextView
            style="@style/header_text"
            android:text="@string/diary"/>

        <Button
            android:id="@+id/from_diary_to_menu"
            style="@style/header_button"
            android:text="@string/to_menu"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
...
                android:layout_marginTop="20dp"
                android:text="@string/notes"
                android:textColor="@color/my_text_color"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/diary_record"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="10dp"
                android:hint="@string/your_notes"
...
